@@ -65,7 +65,7 @@ verbosity = info
 #                contrib = Scrobble, AwesomePlugin,
 #                          ExperimentalTest, AnotherTest
 # default:
-#          internal = "Crop, Lastfm, RandomFallBack"
+#          internal = "Crop, Lastfm, Random"
 #          contrib =
 # description: Plugins list declaration.
 #     Optional plugin's configuration lays in its own section.
@@ -73,11 +73,11 @@ verbosity = info
 #     gets its configuration from the corresponding section:
 #     "[awesomeplugin]"
 #     internal plugins will look for a section named after the lower-cased name
-#     of the pluglin, ie. RandomFallBack → randomfallback.
+#     of the pluglin, ie. Random → random.
 #
 #     Two plugins sources are available, internal and contrib
 #
-internal = Crop, Lastfm, RandomFallBack
+internal = Crop, Lastfm, Random
 #contrib =
 
 ## HISTORY_DURATION
@@ -118,12 +118,11 @@ musicbrainzid = True
 #  Leave commented to keep all tracks
 #consume = 10
 
-[randomfallback]
+[random]
 ## FLAVOUR
 # type: string
 # default: sensible
-# description: When no similar tracks are found, falling back to random
-#     queuing. Different mode, aka random flavour, are available.
+# description: Random queuing, different mode, aka random flavour, are available.
 #     random flavour :
 #       * pure:     complete random choice among all tracks available in the
 #                   player media library
@@ -132,7 +131,7 @@ musicbrainzid = True
 #                   chose among the same genre as current track (using genre
 #                   tag). If no genre tag is available "sensible" flavour
 #                   is used  instead
-#flavour=sensible
+flavour=sensible
 
 ## TRACK_TO_ADD
 # type: integer
